<resources>
    <string name="app_name">MessengerApp</string>
    <string name="nickname">Enter your nickname</string>
    <string name="password">Enter your password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="signout">Sign out</string>
    <string name="update">Update</string>
    <string name="notregistered">Not registered?</string>
    <string name="whatido">What I do</string>
    <string name="loading">Loading...</string>
    <string name="empty_conversation">No conversations found</string>
    <string name="empty_users">No users found</string>
    <string name="homeError">Error. Can not show conversations</string>
    <string name="userError">Error. Can not update user</string>
    <string name="minute">min</string>
    <string name="hour">hour</string>
</resources>