<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup.SignupActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/defaultImage"
        android:layout_width="@dimen/defaultImageDimens"
        android:layout_height="@dimen/defaultImageDimens"
        android:layout_marginTop="@dimen/defaultImageFromTop"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar_image_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nickname"
        android:layout_width="@dimen/edittextWidth"
        android:layout_height="@dimen/edittextHeight"
        android:layout_marginTop="@dimen/loginFromImage"
        android:background="@drawable/roundedview"
        android:gravity="center_horizontal"
        android:hint="@string/nickname"
        android:textAlignment="center"
        android:textSize="@dimen/edittextFontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defaultImage"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:nextFocusDown="@+id/password"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="@dimen/edittextWidth"
        android:layout_height="@dimen/edittextHeight"
        android:layout_marginTop="@dimen/passwordFromNickname"
        android:background="@drawable/roundedview"
        android:gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="@dimen/edittextFontSize"
        android:theme="@style/Theme.MessengerApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:nextFocusDown="@+id/profession"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profession"
        android:layout_width="@dimen/edittextWidth"
        android:layout_height="@dimen/edittextHeight"
        android:layout_marginTop="@dimen/signinButtonFromPassword"
        android:background="@drawable/roundedview"
        android:gravity="center_horizontal"
        android:hint="@string/whatido"
        android:textAlignment="center"
        android:textSize="@dimen/edittextFontSize"
        android:theme="@style/Theme.MessengerApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:nextFocusDown="@+id/signupButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupButton"
        android:layout_width="@dimen/signinButtonWidth"
        android:layout_height="@dimen/signinButtonHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profession"
        android:layout_marginTop="@dimen/signupButtonFromProfession"
        android:text="@string/signup"
        android:textSize="@dimen/signinFontSize"
        android:theme="@style/Theme.MessengerApp"/>


</androidx.constraintlayout.widget.ConstraintLayout>